<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_xacro_gazebo_spawner</name>
  <version>0.0.0</version>
  <description>A simple package that can dynamically spawn robots defined in xacro into Gazebo from ROS2 launch files</description>
  <maintainer email="simonhonigmann@gmail.com">Simon Honigmann</maintainer>
  <license>TODO - License declaration</license>

  <exec_depend>python3-scipy</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
